Corrected the pom.xml file, restructured project directories, added applications.yml file and linked it in the .properties file, added db connection in the yml file, and some other noticiable changes to the project setup